--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+   
+    
+   
+    "build": "echo \"No build specified\" && exit 1",
+     "test": "echo \"No test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
