Done The all the things

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
+mongoURL=mongodb+srv://Nani1210:Nani1210@cluster0.djnt5f0.mongodb.net/GraphMessenger
 
-# MONGO_URL=mongodb+srv://nani1210:<password>@cluster0.lyqhbhu.mongodb.net/GraphTalk
-
+port=8080
